# psychic-winner

./: .gitignore  CMakeLists.txt
include/: constants.h  field.h  game.h  renderer.h  savemanager.h
src/: field.cpp  game.cpp  main.cpp  renderer.cpp  savemanager.cpp
